--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "axios": "^1.6.8",
     "browser-image-compression": "^2.0.2",
     "clsx": "^2.0.0",
+    "dotenv": "^16.4.5",
     "ethers": "^6.11.1",
     "framer-motion": "^11.0.12",
     "lucide-react": "^0.316.0",
     "mobx": "^6.12.3",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.3",
     "next": "13.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
